<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="pull_to_load">上拉加载</string>
    <string name="refreshing">正在刷新</string>
    <string name="loading">正在加载</string>
    <string name="release_to_load">松开加载</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="login_has_expired">登录已过期，请重新登录</string>
    <string name="app_name">答疑时间</string>
    <string name="home_page">首页</string>
    <string name="time_table">课程表</string>
    <string name="message">消息</string>
    <string name="individual">个人</string>
    <string name="latest">最新</string>
    <string name="whole">全部</string>
    <string name="more">更多</string>
    <string name="by_time">按时间</string>
    <string name="by_subject">科目</string>
    <string name="by_grade">年级</string>
    <string name="price">价格范围</string>
    <string name="yuan">元</string>
    <string name="class_hours_range">课时总数</string>
    <string name="hours">课时</string>
    <string name="starting_range">开课时间</string>
    <string name="to">至</string>
    <string name="state">当前状态</string>
    <string name="reset">重置</string>
    <string name="confirm">确定</string>
    <string name="by_price_up">按价格↑</string>
    <string name="by_price_down">按价格↓</string>
    <string name="alignprice">111</string>
    <string name="alignto">111111</string>
    <string name="comprehensive_sort">综合排序</string>
    <string name="in_price_low_to_high">按价格-低到高</string>
    <string name="in_price_high_to_low">按价格-高到低</string>
    <string name="in_number">按购买人数</string>
    <string name="recruiting">招生中</string>
    <string name="chinese">语文</string>
    <string name="math">数学</string>
    <string name="english">英语</string>
    <string name="physics">物理</string>
    <string name="chemistry">化学</string>
    <string name="geography">地理</string>
    <string name="politics">政治</string>
    <string name="history">历史</string>
    <string name="science">科学</string>
    <string name="biology">生物</string>
    <string name="high3">高三</string>
    <string name="high2">高二</string>
    <string name="high1">高一</string>
    <string name="middle3">初三</string>
    <string name="middle2">初二</string>
    <string name="middle1">初一</string>
    <string name="primary6">六年级</string>
    <string name="primary5">五年级</string>
    <string name="primary4">四年级</string>
    <string name="primary3">三年级</string>
    <string name="primary2">二年级</string>
    <string name="primary1">一年级</string>
    <string name="course_to_be_done">未上课</string>
    <string name="course_finished">已上课</string>
    <string name="all_course">全部课程</string>
    <string name="personal_center">个人中心</string>
    <string name="my_order">我的订单</string>
    <string name="paying">待付款</string>
    <string name="paid">已付款</string>
    <string name="cancelled">已取消</string>
    <string name="my_course">我的辅导</string>
    <string name="today">今日</string>
    <string name="to_start">待开课</string>
    <string name="started">已开课</string>
    <string name="done">已结束</string>
    <string name="audition">试听</string>
    <string name="security_management">安全管理</string>
    <string name="setting">系统设置</string>
    <string name="new_edition">新版本</string>
    <string name="clip_photo">裁剪照片</string>
    <string name="personal_information">个人信息</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="grade">年级</string>
    <string name="region">地区</string>
    <string name="school">学校</string>
    <string name="profiles">简介</string>
    <string name="profiles_class">课程简介：</string>
    <string name="head">头像</string>
    <string name="click_to_change">点击更换</string>
    <string name="click_to_add">点击添加</string>
    <string name="hint_name">输入真实姓名更方便老师联系你</string>
    <string name="hint_profiles">一句话介绍自己</string>
    <string name="boy">男生</string>
    <string name="girl">女生</string>
    <string name="finish">完成</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="change_information_successful">个人资料修改成功！</string>
    <string name="id_is_empty">ID为空</string>
    <string name="tutor_information">辅导班详情</string>
    <string name="detail_of_order">订单详情</string>
    <string name="waiting_for_payment">等待付款</string>
    <string name="order_number">订单编号</string>
    <string name="time_built">创建时间</string>
    <string name="time_payment">支付时间</string>
    <string name="method_payment">支付方式</string>
    <string name="amount_payment">应付金额</string>
    <string name="amount_payment_item">实付金额</string>
    <string name="amount_payment_order">支付金额</string>
    <string name="cancel_order">取消订单</string>
    <string name="delete_order">删除订单</string>
    <string name="reorder">重新购买</string>
    <string name="apply_refund">申请退款</string>
    <string name="pay">付款</string>
    <string name="deal_done">交易完成</string>
    <string name="dealing">正在交易</string>
    <string name="deal_closed">交易关闭</string>
    <string name="order_confirm">订单确认</string>
    <string name="pay_confirm">支付确认</string>
    <string name="commodity_name">课程名称</string>
    <string name="commodity_detail">课程详情</string>
    <string name="pay_remind">请您在24小时内完成支付，否则订单会自动取消。</string>
    <string name="problem_phone">遇到问题请拨打客服电话</string>
    <string name="information_detail">课程介绍</string>
    <string name="teacher_detail">教师资料</string>
    <string name="teachers_detail">教师组资料</string>
    <string name="course_list">上课安排</string>
    <string name="student_number">报名人数 %1$d</string>
    <string name="Join_the_audition">加入试听</string>
    <string name="Joined_the_audition">已加入试听</string>
    <string name="purchase_now">立即报名</string>
    <string name="purchased">人报名</string>
    <string name="no_tutorial_classes_ID">没有辅导班ID</string>
    <string name="account">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="register">注册账号</string>
    <string name="enter">直接进入</string>
    <string name="login">登录</string>
    <string name="click_login">点击登录</string>
    <string name="login_right_now">立即登录</string>
    <string name="forget_password">找回密码</string>
    <string name="verification_code">请输入验证码</string>
    <string name="verification_code_is_incorrect">验证码不正确</string>
    <string name="logout">切换账号</string>
    <string name="press_another_exit">再按一次退出程序</string>
    <string name="set_for_login">设置登录</string>
    <string name="get_verification_code">获取校验码</string>
    <string name="hint_input_verification_code">输入校验码</string>
    <string name="hint_input_email_code">输入邮箱校验码</string>
    <string name="hint_phone_number">请输入大陆地区11位手机号码</string>
    <string name="hint_input_password">输入登录密码</string>
    <string name="hint_confirm_password">确认登录密码</string>
    <string name="hint_qatime_register_code">请输入答疑时间注册码</string>
    <string name="agree"> 同意</string>
    <string name="agreement">《答疑时间用户协议》</string>
    <string name="phone_number_is_incorrect">手机号码不正确</string>
    <string name="can_not_be_empty">不能为空</string>
    <string name="name_can_not_be_empty">姓名不能为空</string>
    <string name="grade_can_not_be_empty">年级不能为空</string>
    <string name="account_can_not_be_empty">账号不能为空</string>
    <string name="password_can_not_be_empty">密码不能为空</string>
    <string name="repassword_can_not_be_empty">请再输一遍密码</string>
    <string name="password_and_repassword_are_incongruous">前后密码不一致</string>
    <string name="enter_the_verification_code">请输入验证码</string>
    <string name="enter_the_register_code">请输入注册码</string>
    <string name="agree_agreement">是否同意有关协议</string>
    <string name="next">下一步</string>
    <string name="information_perfect">完善信息</string>
    <string name="press_again_to_exit">再按一次退出程序</string>
    <string name="hint_phone_number_forget">请输入绑定手机号码</string>
    <string name="hint_password_forget">请输入新密码</string>
    <string name="find_password">找回密码</string>
    <string name="class_name">课程名称：</string>
    <string name="subject_type">科目类型：</string>
    <string name="teacher">授课教师：</string>
    <string name="progress">进度%1$d/%2$d</string>
    <string name="progress_live">[进度%1$d/%2$d]</string>
    <string name="progress_taste">已试听%1$d/%2$d</string>
    <string name="teach_way">授课方式：</string>
    <string name="remain_class">剩余课时：</string>
    <string name="total_class_hours">课时总数：</string>
    <string name="class_end_time">结课时间：</string>
    <string name="class_start_time">开课时间：</string>
    <string name="status_preview">当前状态：招生中</string>
    <string name="status_teaching">当前状态：已开课</string>
    <string name="status_over">当前状态：已结束</string>
    <string name="current_status">当前状态：</string>
    <string name="grade_type">授课类型：</string>
    <string name="teacher_name">教师名</string>
    <string name="teacher_years">执教年龄 </string>
    <string name="within_three_years">3年以内</string>
    <string name="within_ten_years">3-10年</string>
    <string name="more_than_ten_years">20年以上</string>
    <string name="within_twenty_years">10-20年</string>
    <string name="teacher_subject">授课科目：</string>
    <string name="teacher_school">所在学校 </string>
    <string name="teacher_introduction">自我介绍：</string>
    <string name="class_teaching">直播中</string>
    <string name="class_init">未开始</string>
    <string name="class_ready">待上课</string>
    <string name="class_wait">待补课</string>
    <string name="class_paused_inner">暂停中</string>
    <string name="class_over">已结束</string>
    <string name="use">使用</string>
    <string name="fail_pay">不能支付</string>
    <string name="payment_result">支付结果</string>
    <string name="pay_failure">支付结果未找到</string>
    <string name="pay_success">支付成功</string>
    <string name="button_commit">提交</string>
    <string name="wexin_payment">微信支付</string>
    <string name="alipay_payment">支付宝支付</string>
    <string name="alipay">支付宝</string>
    <string name="pay_now">立即支付</string>
    <string name="confirm_payment">确认支付</string>
    <string name="payment_results_are_being_queried">正在查询支付结果</string>
    <string name="remedial_class_message">辅导班消息</string>
    <string name="system_message">系统消息</string>
    <string name="item_teacher">老师：</string>
    <string name="item_class_start_date">开课</string>
    <string name="item_class_end_date">结课</string>
    <string name="item_next_class">下一课</string>
    <string name="item_to_start">距离开课</string>
    <string name="item_day">天</string>
    <string name="item_subject">科目：</string>
    <string name="item_time">时间</string>
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="current_parent_phone">当前家长手机</string>
    <string name="new_parent_phone">家长新手机号</string>
    <string name="over">完成</string>
    <string name="input_current_password">输入当前密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="confirm_new_password">请确认新密码</string>
    <string name="forget_password_1">忘记密码</string>
    <string name="hint_input_again">再输入一次</string>
    <string name="hint_input_current_password">请输入当前登录密码</string>
    <string name="hint_6_16_password">6-16位字母或数字</string>
    <string name="class_range">课程范围</string>
    <string name="sms_notify">短信通知</string>
    <string name="sys_notify">系统通知</string>
    <string name="getcode">获取校验码</string>
    <string name="alert_mode">提醒方式</string>
    <string name="time_setting">设置时间</string>
    <string name="Remedial_classes">辅导班课程</string>
    <string name="public_course">公开课课程</string>
    <string name="advance">提前</string>
    <string name="remind_me">提醒我</string>
    <string name="recharge_record">充值记录</string>
    <string name="consumption_record">消费记录</string>
    <string name="withdraw_cash_record">提现记录</string>
    <string name="hint_input_alipay_account">请输入完整的支付宝账号</string>
    <string name="input_real_name">请输入真实姓名</string>
    <string name="withdraw_cash_now">立即提现</string>
    <string name="refund_record">退款记录</string>
</resources>