<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_backbar" />

    <LinearLayout
        style="@style/edit_layout_style">

        <LinearLayout
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            style="@style/edit_layout_top_style">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/current_parent_phone"
                 />

            <TextView
                android:id="@+id/current_parent_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="137****5678"
                 />
        </LinearLayout>


        <LinearLayout
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            style="@style/edit_layout_center_style"

            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/hint_input_password"
                 />

            <EditText
                android:id="@+id/password"
                android:layout_marginLeft="24dp"
                style="@style/activity_edit_text_style"
                android:maxLength="16"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            style="@style/edit_layout_center_style">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/new_parent_phone"
                 />

            <EditText
                android:id="@+id/new_parent_phone"
                style="@style/activity_edit_text_style"
                android:inputType="phone"
                android:layout_marginLeft="24dp"
                android:maxLength="11" />

        </LinearLayout>

        <LinearLayout
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            style="@style/edit_layout_bottom_style">

            <EditText
                android:id="@+id/code"
                style="@style/activity_edit_text_style"
                android:layout_marginRight="12dp"
                android:inputType="number" />

            <TextView
                android:id="@+id/text_getcode"
                style="@style/button_style"
                android:layout_marginLeft="12dp"
                android:text="@string/getcode" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_over"
        style="@style/button_full_width_style"
        android:text="@string/over" />
</LinearLayout>