<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_backbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:background="@drawable/text_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:text="@string/input_current_password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_input"
                android:inputType="textPassword"
                android:paddingBottom="8dp"
                android:hint="@string/hint_input_current_password"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColorHint="#ff999999"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:clickable="true"
                android:text="@string/forget_password_1"
                android:textColor="#0000ff"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/input_new_password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_input"
                android:inputType="textPassword"
                android:paddingBottom="8dp"
                android:hint="@string/hint_6_16_password"
                android:gravity="center_vertical"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textColorHint="#ff999999"
                android:textSize="14sp" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="80dp"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/match_pwd1"
                    android:layout_width="wrap_content"
                    android:visibility="invisible"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/pay_success" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:text="@string/confirm_new_password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/confirm_new_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_input"
                android:inputType="textPassword"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:hint="@string/hint_input_again"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColorHint="#ff999999"
                android:textSize="14sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="80dp"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/match_pwd2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:src="@mipmap/pay_success" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_over"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#fff"
        android:background="@drawable/button_bg_selector_orange"
        android:text="@string/over" />
</LinearLayout>