<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    android:paddingBottom="1px">

    <LinearLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/tab_item_height"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <!-- android:id="@+id/tab_text" -->
            <TextView
                android:id="@+id/tab_text1"
                style="@style/tab_text_color_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/recharge_record" />
        </LinearLayout>

        <LinearLayout
            style="@style/tab_item_height"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <!-- android:id="@+id/tab_text" -->
            <TextView
                android:id="@+id/tab_text2"
                style="@style/tab_text_color_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/withdraw_cash_record" />
        </LinearLayout>

        <LinearLayout
            style="@style/tab_item_height"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tab_text3"
                style="@style/tab_text_color_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/consumption_record" />
        </LinearLayout>

        <LinearLayout
            style="@style/tab_item_height"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tab_text4"
                style="@style/tab_text_color_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/refund_record" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
